set region medium container spacing to 96px fixing myriad alignment issues

--- a/resources/css/components/sections/hero-section-case.css
+++ b/resources/css/components/sections/hero-section-case.css
@@ -105,11 +105,12 @@
          padding-right: 100px;
          height: initial;
    }
-   
+
    #hero-section-case {
       justify-content: initial;
+      height: initial;
    }
-}
+
 
 
    /* region large */
